central image and sign up link added in main body

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             <p>We at Anywhere Fitness want to make progress just the same as you do!  This application will grow and "gain" just the same as you will in your fitness adventures!  Expect many new features and benefits to come! </p>
         </div>
 
+        <div class = "centerImg">
+            <img src="img/bruce-mars.jpg" alt="">
+        </div>
+
+        <div class = "centerText">
+            <h2>Sign Up for a Free Trial!</h2>
+            <p>We here at Anywhere Fitness wants you to explore the benefits offered through our appllication so much that we are offering a free month trial! <a href=#>click here</a> to sign up as a trainer or as a client</p>
+        </div>
+
         <div class = ""></div>
     </section>
 
