Home Page styled for desktop

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </div>
 
         <div class = "introImg">
-            <img src="img/john-arano.jpg" alt="flexWoman">
+            <section class = "imgContainer">
+                <img src = "img/john-arano.jpg" alt="flexWoman">
+            </section>
         </div>
 
         <div class = "introPara2">
@@ -54,7 +56,22 @@
             <p>We here at Anywhere Fitness wants you to explore the benefits offered through our appllication so much that we are offering a free month trial! <a href=#>click here</a> to sign up as a trainer or as a client</p>
         </div>
 
-        <div class = ""></div>
+        <div class = "contactDets">
+            <h2>Contact Us</h2>
+            <h3>Anywhere Fitness</h3>
+            <p>9095 E. Tanglewood St.<br>Lakeland, FL 33801</p>
+            <h3>Email:</h3>
+            <p>AnwhereFitness@afitness.com</p>
+            <h3>Phone</h3>
+            <p>(555)123-4567</p>
+        </div>
+
+        <div class = "footer">
+            <section class = "footerContentBox">
+                <h3>Copyright Anywhere Fitness 2020</h3><br>
+                <p>images courtesy of Madison Lavern, Kunal Goswami, Alora Griffiths, Bruce Mars, and John Arano via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
+            </section>
+        </div>
     </section>
 
     
