resolved some home page spacing issues

--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
             <a class = 'sideNav' href="">Home</a>
             <a class = 'sideNav' href="">Store</a>
             <a class = 'sideNav' href="">About Us</a>
-            <a class = 'sideNav' href="">Contact</a>
+            <a class = 'sideNav' href="">Help</a>
         </nav>
     </section>
 
     <section class = 'mainContent'>
         <div class = 'introText'>
-            <h1>Anywhere Fitness<br> <span> Your One Stop App That Lets You Keep Your Mind on the Grind</span></h1> 
+            <section class = "introTextContainer">
+                <h1>Anywhere Fitness</h1> 
+                <div><p>Your One Stop App That Lets You Keep Your Mind on the Grind</p></div>
+            </section> 
         </div>
 
         <div class = "introPara1">
@@ -66,12 +69,18 @@
             <p>(555)123-4567</p>
         </div>
 
+        <div class = "phoneImg">
+            <img src="img/alexander-andrews.jpg" alt="">
+        </div>
+
         <div class = "footer">
             <section class = "footerContentBox">
                 <h3>Copyright Anywhere Fitness 2020</h3><br>
                 <p>images courtesy of Madison Lavern, Kunal Goswami, Alora Griffiths, Bruce Mars, and John Arano via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
             </section>
         </div>
+
+        
     </section>
 
     
