added html page for about us and header styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img class = 'nav3' src="img/madison-lavern.jpg" alt="sideBarImg3">
             <a class = 'sideNav' href="">Home</a>
             <a class = 'sideNav' href="">Store</a>
-            <a class = 'sideNav' href="">About Us</a>
+            <a class = 'sideNav' href="aboutPage.html">About Us</a>
             <a class = 'sideNav' href="">Help</a>
         </nav>
     </section>
@@ -76,7 +76,7 @@
         <div class = "footer">
             <section class = "footerContentBox">
                 <h3>Copyright Anywhere Fitness 2020</h3><br>
-                <p>images courtesy of Madison Lavern, Kunal Goswami, Alora Griffiths, Bruce Mars, and John Arano via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
+                <p>images courtesy of Alexander Andrews, Alora Griffiths, Bruce Mars, John Arano, Kunal Goswami, and Madison Lavern via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
             </section>
         </div>
 
