Project Lead added

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -19,8 +19,24 @@
         </section>
 
         <div class = "top2Staff">
-            <section class = "imgContainer">
-            </section>
+            <div class = "jasmine">
+                <section class = "imgContainer">
+                    <img src="img/Project-Lead.png" alt="Jasmine">
+                </section>
+                <section class = "PLtext">
+                    <h1>Project Lead</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
+                </section>
+            </div>
+            <div class = "corey">
+                <section class = "imgContainer">
+                    <img src="img/Project-Lead.png" alt="Jasmine">
+                </section>
+                <section class = "PLtext">
+                    <h1>Project Lead</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
+                </section>
+            </div>
         </div>
     </body>
 </html>
