group photos added and flex styles created for about page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -28,13 +28,58 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
                 </section>
             </div>
+
             <div class = "corey">
-                <section class = "imgContainer">
-                    <img src="img/Project-Lead.png" alt="Jasmine">
+                <section class = "imgContainer2">
+                    <img src="img/Back-End.png" alt="Corey">
                 </section>
-                <section class = "PLtext">
-                    <h1>Project Lead</h1>
+                <section class = "BEtext">
+                    <h1>Back-End</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
+                </section>
+            </div>
+        </div>
+
+        <div class = "frontEndStaff">
+            <div class = "amy">
+                <section class = "FEimg">
+                    <img src="img/Front-End React.png" alt="Amy">
+                </section>
+                <section class = "FE_text">
+                    <h1>Front End</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                </section>
+            </div>
+
+            <div class = "shya">
+                <section class = "FEimg1">
+                    <img src="img/Front-End_React_1.png" alt="Shya">
+                </section>
+                <section class = "FE_1_text">
+                    <h1>Front End</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                </section>
+            </div>
+        </div>
+
+        <div class = "frontEndStaff">
+            <div class = "amy">
+                <section class = "FEimg">
+                    <img src="img/Front-End React.png" alt="Amy">
+                </section>
+                <section class = "FE_text">
+                    <h1>Front End</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                </section>
+            </div>
+
+            <div class = "shya">
+                <section class = "FEimg1">
+                    <img src="img/Front-End_React_1.png" alt="Shya">
+                </section>
+                <section class = "FE_1_text">
+                    <h1>Front End</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
         </div>
