about page complete with mobile styling

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -24,7 +24,7 @@
                     <img src="img/Project-Lead.png" alt="Jasmine">
                 </section>
                 <section class = "PLtext">
-                    <h1>Project Lead</h1>
+                    <h1>Project Lead<span>-- Jasmine Khoury</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
                 </section>
             </div>
@@ -34,7 +34,7 @@
                     <img src="img/Back-End.png" alt="Corey">
                 </section>
                 <section class = "BEtext">
-                    <h1>Back-End</h1>
+                    <h1>Back-End<span>-- Corey Murray</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
                 </section>
             </div>
@@ -46,7 +46,7 @@
                     <img src="img/Front-End React.png" alt="Amy">
                 </section>
                 <section class = "FE_text">
-                    <h1>Front End</h1>
+                    <h1>Front End<span>-- Amy Sheppard</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
@@ -56,32 +56,38 @@
                     <img src="img/Front-End_React_1.png" alt="Shya">
                 </section>
                 <section class = "FE_1_text">
-                    <h1>Front End</h1>
+                    <h1>Front End<span>-- Shya Biswas</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
         </div>
 
-        <div class = "frontEndStaff">
-            <div class = "amy">
-                <section class = "FEimg">
-                    <img src="img/Front-End React.png" alt="Amy">
+        <div class = "UIStaff">
+            <div class = "adam">
+                <section class = "uiImg">
+                    <img src="img/User-Interface.png" alt="Adam">
                 </section>
-                <section class = "FE_text">
-                    <h1>Front End</h1>
+                <section class = "uiText">
+                    <h1>User Interface<span>-- Adam Young</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
 
-            <div class = "shya">
-                <section class = "FEimg1">
-                    <img src="img/Front-End_React_1.png" alt="Shya">
+            <div class = "jeremy">
+                <section class = "uiImg_1">
+                    <img src="img/User-Interface_1.png" alt="Jeremy">
                 </section>
-                <section class = "FE_1_text">
-                    <h1>Front End</h1>
+                <section class = "uiText_1">
+                    <h1>User Interface<span>-- Jeremy Freetly</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
+        </div>
+
+        <div class = "aboutFooter">
+            <section class = "footerContentBox">
+                <h3>Copyright Anywhere Fitness 2020</h3>
+            </section>
         </div>
     </body>
 </html>
