--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
 
     <section class = 'mainContent'>
         <div class = 'introText'>
-            <section class = "introTextContainer">
-                <h1>Anywhere Fitness</h1> 
-                <div><p>Your One Stop App That Lets You Keep Your Mind on the Grind</p></div>
-            </section> 
+            <section class = "textContain">
+                <section>
+                    <h1>Anywhere Fitness</h1>
+                </section> 
+
+                <section>
+                    <p>Your One Stop App That Lets You Keep Your Mind on the Grind</p>
+                </section>
+            </section>
+             
         </div>
         
         <div class = "introPara1">
@@ -75,8 +81,12 @@
 
         <div class = "footer">
             <section class = "footerContentBox">
-                <h3>Copyright Anywhere Fitness 2020</h3><br>
-                <p>images courtesy of Alexander Andrews, Alora Griffiths, Bruce Mars, John Arano, Kunal Goswami, and Madison Lavern via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
+                <section>
+                    <h3>Copyright Anywhere Fitness 2020</h3>
+                </section>
+                <section>
+                    <p>images courtesy of Alexander Andrews, Alora Griffiths, Bruce Mars, John Arano, Kunal Goswami, and Madison Lavern via <a target = "_blank" href="https://unsplash.com/">unsplash.com</a> </p>
+                </section>
             </section>
         </div>
 
