fixed a problem with p tag color specificity

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </section> 
 
                 <section>
-                    <p>Your One Stop App That Lets You Keep Your Mind on the Grind</p>
+                    <p class = 'intro'>Your One Stop App That Lets You Keep Your Mind on the Grind</p>
                 </section>
             </section>
              
