adjustments to html text

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -41,12 +41,12 @@
         </div>
 
         <div class = "frontEndStaff">
-            <div class = "amy">
+            <div class = "ashley">
                 <section class = "FEimg">
-                    <img src="img/Front-End React.png" alt="Amy">
+                    <img src="img/Front-End React.png" alt="Ashley">
                 </section>
                 <section class = "FE_text">
-                    <h1>Front End<span>-- Amy Sheppard</span></h1>
+                    <h1>Front End<span>-- Ashley Sheppard</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
                 </section>
             </div>
