made team images more responsive -about us page

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -25,7 +25,7 @@
                 </section>
                 <section class = "PLtext">
                     <h1>Project Lead<span>-- Jasmine Khoury</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. In semper urna vel molestie dapibus. Sed faucibus erat eget enim bibendum, sit amet facilisis odio rhoncus. Nulla sed varius nibh. Pellentesque vitae semper nulla, id pharetra lectus.</p>
+                    <p>From a Bachelor's Degree in Anthropology to a Full Stack Web Developer at Lambda School. While at Lambda School Jasmine has acquired skills in Frontend and Backend using a variety of programming languages and frameworks such as React Native, ReactJS, JavaScript, HTML5, CSS, LESS, Redux, and Formik.</p>
                 </section>
             </div>
 
@@ -79,7 +79,7 @@
                 </section>
                 <section class = "uiText_1">
                     <h1>User Interface<span>-- Jeremy Freetly</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                    <p>"I really love the sense of satisfaction that comes from seeing a fully-styled webpage that ultimately just comes from a set of instructions I've written to a computer.  It's a cool concept and I am always wondering how to go about being a better coder and designer.  I am new to programming, but it fits right in with my love of learning new languages.  Besides that, there's not much I love more than hanging out on the beach, meditating in the Sun and letting inspiration come to me. "</p>
                 </section>
             </div>
         </div>
