project complete at MVP

--- a/aboutPage.html
+++ b/aboutPage.html
@@ -47,7 +47,7 @@
                 </section>
                 <section class = "FE_text">
                     <h1>Front End<span>-- Ashley Sheppard</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                    <p>"I have always been passionate about improving the world around me. After six years of working as a Medical Laboratory Technician. I decided to go after my dreams and become a Full Stack Web Developer. I have acquired many skills so far at Lambda School including: JavaScript, HTML5, CSS, LESS, React Native, ReactJS, Formik and Yup."</p>
                 </section>
             </div>
 
@@ -69,7 +69,7 @@
                 </section>
                 <section class = "uiText">
                     <h1>User Interface<span>-- Adam Young</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut nisl nisl, facilisis posuere tristique aliquet, semper sed libero. Donec maximus condimentum eros, sit amet scelerisque lectus laoreet rutrum. </p>
+                    <p>"As a former IT in the US Navy, I have alway had a passion for computers. Ive have always wanted to learn to code but didnt know where to start. Thanks to Lambda School i now have that opportunity to learn. So far i have learned HTML and CSS to create basic websites. Im excited to learn meny new skills with my time in Lambda School." </p>
                 </section>
             </div>
 
