--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     
     <section class = 'header'>
         <nav>
-            <img class = 'nav1' src="img/kunal-goswami.jpg" alt="sideBarImg">
-            <img class = "nav2" src = "img/alora-griffiths.jpg" alt = 'sideBarImg2'>
-            <img class = 'nav3' src="img/madison-lavern.jpg" alt="sideBarImg3">
+            <img class = 'nav1' src="img/kunal-goswami-min.jpg" alt="sideBarImg">
+            <img class = "nav2" src = "img/alora-griffiths-min.jpg" alt = 'sideBarImg2'>
+            <img class = 'nav3' src="img/madison-lavern-min.jpg" alt="sideBarImg3">
             <a class = 'sideNav' href="">Home</a>
             <a class = 'sideNav' href="">Store</a>
             <a class = 'sideNav' href="aboutPage.html">About Us</a>
@@ -52,12 +52,12 @@
 
         <div class = "introImg">
             <section class = "imgContainer">
-                <img src = "img/john-arano.jpg" alt="flexWoman">
+                <img src = "img/john-arano-min.jpg" alt="flexWoman">
             </section>
         </div>
 
         <div class = "centerImg">
-            <img src="img/bruce-mars.jpg" alt="">
+            <img src="img/bruce-mars-min.jpg" alt="">
         </div>
 
         <div class = "centerText">
