added link to sign up

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <div class = "centerText">
             <h2>Sign Up for a Free Trial!</h2>
-            <p>We here at Anywhere Fitness wants you to explore the benefits offered through our appllication so much that we are offering a free month trial! <a href=#>click here</a> to sign up as a trainer or as a client</p>
+            <p>We here at Anywhere Fitness wants you to explore the benefits offered through our appllication so much that we are offering a free month trial! <a href="https://anytimefitness.netlify.com/">click here</a> to sign up as a trainer or as a client</p>
         </div>
 
         <div class = "contactDets">
